[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/art/environments/top/objects/doors/door-basic.png" type="Texture" id=1]
[ext_resource path="res://src/scripts/templates/BasicDoor.gd" type="Script" id=2]
[ext_resource path="res://assets/sound/sfx/misc/ship_door.wav" type="AudioStream" id=3]
[ext_resource path="res://src/ui/interactions/SimpleInteractionUI.tscn" type="PackedScene" id=4]



[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.04, 3.03852 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="Animation" id=3]
resource_name = "open"
length = 5.7
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 5.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer2D:stream")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 1.6, 4.1, 5.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 32, 0 ), Vector2( 32, 0 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 1.6, 4.1, 5.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 32, 0 ), Vector2( 32, 0 ), Vector2( 0, 0 ) ]
}

[node name="BasicDoor" type="StaticBody2D"]
input_pickable = true
collision_layer = 2

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Interaction" type="Area2D" parent="."]
z_index = 100
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Interaction"]
anims/open = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Interaction"]
stream = ExtResource( 3 )

[node name="SimpleInteractionUI" parent="Interaction" instance=ExtResource( 4 )]
visible = false

[node name="InteractionIndicator" parent="Interaction/SimpleInteractionUI" index="0"]
visible = false
[connection signal="mouse_entered" from="." to="Interaction" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="Interaction" method="_on_mouse_exited"]
[connection signal="body_entered" from="Interaction" to="Interaction" method="_on_body_entered"]
[connection signal="body_exited" from="Interaction" to="Interaction" method="_on_body_exited"]

[editable path="Interaction/SimpleInteractionUI"]
